# 100-days-python

./: Trainer-Tips-Note.txt
CoffeeMachine/: main.py
Python-100-Days-NOTES/: Trainer-Tips.txt
day-16-start/: main.py
day-17-start/: main.py
day-18-start/: main.py
day-19-race-game/: main.py
day-19-start/: main.py
day-20-21-snake-game/: main.py  scoreboard.py
day-22-pong-game/: ball.py
day-24-mail-merge/: main.py
day-25-csv-pandas/: main.py
day-25-us-states-game/: main.py
day-26-NATO-alphabet/: main.py
day-26-list-comprehension/: dic_comp_self.py  main_list_dic.py  main_pandas_iterate.py
day-27-tkinter-and-args-kwargs/: main.py  mile-to-km-converter.py  tkinter-widget-demo.py
day-29-tkinter-password-manager/: data.txt  main.py
day-30-exceptions-json-data/: data.json  main.py
day-31-flash-card-project/: main.py
day-32-birthday-wisher/: birthdays.csv  main-self.py  main.py
day-32-smtp-datetime/: main.py  monday_motivation_main.py
day-33-api-is-overhead/: main.py
day-33-kanye-quotes/: main.py
day-35-one-call-api/: main.py
day-36-stock-news/: main.py  tutor-main.py
day-37-habit-tracking-post-api/: main.py
day-38-exercise-tracking/: main.py
day-39-flight-deals/: data_manager.py  flight_data.py  flight_search.py  main.py  notification_manager.py
day-39-flight-deals-tutor/: data_manager.py  flight_search.py  main.py  notification_manager.py
day-40-flight-club/: data_manager.py  flight_search.py  main.py  notification_manager.py
day-66-build-REST-APIs/: cafes.db  main.py  query-apis.py  readme  requirements.txt  setup.cfg
(+56 files in other folders)
