[metadata]
name = mycafesapi
author = Seyi Adedokun
version = 0.1
packages = find_packages(include=['build-REST-APIs', 'build-REST-APIs.*'])
[options]
install_requires =
    certifi
    charset-normalizer
    click
    colorama
    Flask
    Flask-SQLAlchemy
    greenlet
    idna
    itsdangerous
    Jinja2
    MarkupSafe
    pip
    requests
    setuptools
    SQLAlchemy
    urllib3
    Werkzeug
